--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,6 +6,16 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - weather.alsup
   resources:
   - weathers
