--- a/config/samples/weather_v1beta1_weather.yaml
+++ b/config/samples/weather_v1beta1_weather.yaml
@@ -5,4 +5,6 @@ metadata:
 spec:
   lon: "-77.98832108933742"
   lat: "38.446507669062406"
-  api_key: "74c07887b1338cfa69b9964f8d8b5030"
+  secretRef:
+    name: weather-api-secret
+    key: token
