--- a/config/samples/weather_v1beta1_hydes.yaml
+++ b/config/samples/weather_v1beta1_hydes.yaml
@@ -8,4 +8,4 @@ spec:
   secretRef:
     name: weather-api-secret
     key: token
-  #api_key: "74c07887b1338cfa69b9964f8d8b5030"
+  refreshPeriod: "5m"
